--- a/API/package.json
+++ b/API/package.json
@@ -12,6 +12,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
